--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -1,14 +1,40 @@
 body {
     background-color: #f8f9fa;
     font-family: Arial, sans-serif;
-    background-image: url('images/background.png');
+    background-image: url('../images/background.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
+    padding-top: 20px;
   }
   
-  
+  .white-box {
+    background-color: rgba(255, 255, 255, 0.8); /* Add opacity to make it sheer */
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Add shadow for depth */
+} 
+
+.navbar-nav {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-nav .nav-item {
+  margin-left: 10px;
+}
+
+.nav-tabs .nav-item {
+  background-color: rgba(255, 255, 255, 1);
+  backdrop-filter: blur(5px);
+}
+
+.recipe-info {
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
   .login-container {
     max-width: 400px;
     margin: 100px auto;
