--- a/frontend/css/homePage.css
+++ b/frontend/css/homePage.css
@@ -24,4 +24,11 @@
     border-radius: 5px; /* Rounded corners for image */
     margin-top: 10px; /* Add some space above image */
   }
+
+  .tab{
+    /* color: black; */
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 16px;
+  }
   
