--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -5,8 +5,9 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     position: relative;
-    padding-top: 20px;
+    padding-top: 0px;
   }
   
   .white-box {
