Added search and filter features

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -101,4 +101,13 @@ body {
 
     
   }
+
+  .hideLink{
+    color: black;
+    text-decoration: none;
+  }
+  .hideLink:hover{
+    color: black;
+    text-decoration: none;
+  }
   
